# chameleon-tongue

./: .gitignore  CMakeLists.txt  COPYING  README.md
etc/input-method/: im.conf  target
locale.d/cs/: 70-fcitx
locale.d/el/: 80-ibus
misc/: input-method.desktop
profile.d/auto/: env
profile.d/fcitx/: env  start
profile.d/ibus/: env  start
profile.d/none/: env
src/cli/: AutoSelect.cc  AutoSelect.hh  CMakeLists.txt  Config.hh  Environment.cc  Environment.hh  Help.hh  IMSettingsConfig.h.in  List.hh  Options.cc  Options.hh  Select.hh  SubCommand.hh  SubCommandRegistory.hh  Version.hh  errors.cc  errors.hh  main.cc
src/gtk/: gtk-config.glade  im-settings-gtk.py
src/simple/: AutoSelect.cc  AutoSelect.hh  CMakeLists.txt  Config.hh  Environment.cc  Environment.hh  Help.hh  List.hh  Options.cc  Options.hh  Select.hh  SubCommand.hh  SubCommandRegistory.hh  Version.hh  main.cc  select-im.cc
xinitrc.d/: input-method.sh  xinitrc-input-method.sh
